--- a/Oceanalytics/Demo-angular2/src/app/tabular-table/tabular-table.component.html
+++ b/Oceanalytics/Demo-angular2/src/app/tabular-table/tabular-table.component.html
@@ -1,17 +1,12 @@
 <table class="table table-condensed">
   <tr>
     <th style="width: 10px">#</th>
-    <th>Instance Name</th>
-    <th>Task</th>
-    <th>Measure topics</th>
-    <th style="width: 40px">code</th>
+    <th *ngFor="let field of fields" [innerHtml]="field"></th>
+    <th>Topic</th>
   </tr>
-  <tr *ngFor="let item of data">
-    <td [innerHtml]="$index"></td>
-    <td [innerHtml]="item.key"></td>
-    <td [innerHtml]="item.value.kafkaTopicName">
-    <td [innerHtml]="item.topic">
-    </td>
-    <td><span class="badge bg-red" [innerHtml]="item.value.time"></span></td>
+  <tr *ngFor="let item of data; let i = index;">
+    <td [innerHtml]="i"></td>
+    <td *ngFor="let field of fields" [innerHtml]="item.value.realtimeData[field]"></td>
+    <td [innerHtml]="item.topic"></td>
   </tr>
 </table>
