fixing route bug

--- a/Oceanalytics/Demo-angular2/src/app/client/client.component.html
+++ b/Oceanalytics/Demo-angular2/src/app/client/client.component.html
@@ -4,7 +4,7 @@
     <div class="box">
       <div class="box-header with-border">
         <h3 class="box-title">Client Progress</h3>
-        <a routerLink="/server" class="serverLink">Server Link</a>
+        <a routerLink="/server" class="serverLink" target="_blank">Server Link</a>
       </div>
       <div class="box-body">
         <form role="form">
